Bug 16478 - shifted xorg-screen with i830 integrated video
Summary: shifted xorg-screen with i830 integrated video
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - Intel) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_video-dri-intel@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-28 23:22 UTC by Martin
Modified: 2010-09-27 05:34 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.35-rc6-git3
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg_drm_debug (30.39 KB, text/plain)
2010-07-31 12:17 UTC, Martin
Details

Description Martin 2010-07-28 23:22:34 UTC
I have a shifted xorg-screen, a jerking mouse and a lot of lockups with google earth on kernel 2.6.35-rc-git3.
Kernel 2.6.35-rc4 (and also rc5) worked perfect!! (see my comment 7 here: https://bugzilla.kernel.org/show_bug.cgi?id=15057)
Comment 1 Martin 2010-07-30 10:54:09 UTC
I re-added this removed line in intel_display.c:

      drm_mode_set_crtcinfo(adjusted_mode, 0);

and now my screen is back to normal!
I have a Dell Latitude C400 and the only Display I use is the internal one.
Comment 2 Chris Wilson 2010-07-30 18:56:52 UTC
That implies that the adjusted mode, which in your case will be the preferred mode for your panel, is garbage. So either the Video Bios Table or the panel EDID  is garbage, or more fail.

I think a dmesg with drm.debug=0xc should have sufficient information to work out the requested versus programmed mode and so see if the adjusted mode makes sense.
Comment 3 Martin 2010-07-31 12:17:19 UTC
Created attachment 27306 [details]
dmesg_drm_debug
Comment 4 Chris Wilson 2010-08-11 10:44:28 UTC
Well I wrong in my assertion that we actually printed out the adjusted mode prior to use...

The error is on the LVDS panel, right? Hmm, I'm getting the vibe that panel fitting was only introduced with 855GM...
Comment 5 Chris Wilson 2010-08-11 11:04:46 UTC
Hmm, the LVDS is not even attached on i830, so something is seriously amiss.
Comment 6 Chris Wilson 2010-09-12 16:19:20 UTC
Please do try:  git://git.kernel.org/pub/scm/linux/kernel/git/ickle/drm-intel.git drm-intel-staging

In particular: http://git.kernel.org/?p=linux/kernel/git/ickle/drm-intel.git;a=commit;h=50ea5bf01ed778c1894377131334770a5faacc3e

Thanks.
Comment 7 Florian Mickler 2010-09-22 08:09:52 UTC
Martin, does the patch fix your issue?
Comment 8 Chris Wilson 2010-09-22 08:31:24 UTC
That patch is upstream as it fixed various other issues, so you can try linus/master or 2.6.36-rc5 [upon tagging]. It should also be backported to stable.
Comment 9 Martin 2010-09-24 21:38:30 UTC
It works!
I have tried kernel 2.6.36-rc5 today and my issue is fixed now.
Thank you for the support!
Comment 10 Florian Mickler 2010-09-27 05:34:42 UTC
Thx for testing!

Note You need to log in before you can comment on or make changes to this bug.